--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           <input type="text" required id="name" name="name" placeholder="Your name.." required/>
         </div>
         <div id="emailid" class="inputs">
-          <label for="email">Valid Email</label>
+          <label for="email">Email</label>
           <input type="email"required id="email" name="email" placeholder="Your email.." required />
         </div>
         <div id="passwd" class="inputs">
-          <label for="password">New Password</label>
+          <label for="password">Password</label>
           <input type="password" required id="password" name="password" placeholder="Enter Password" required/>
         </div>
         <div id="dob_id" class="inputs">
