--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <h1>Registration Form </h1>
       <form id="form">
         <div id="username" class="inputs">
-          <label for="name">Enter your name</label>
+          <label for="name">Name:</label>
           <input type="text" required id="name" name="name" placeholder="Your name.." required/>
         </div>
         <div id="emailid" class="inputs">
-          <label for="email">Email</label>
+          <label for="email">Email:</label>
           <input type="email"required id="email" name="email" placeholder="Your email.." required />
         </div>
         <div id="passwd" class="inputs">
-          <label for="password">Password</label>
+          <label for="password">Password:</label>
           <input type="password" required id="password" name="password" placeholder="Enter Password" required/>
         </div>
         <div id="dob_id" class="inputs">
-          <label for="dob">Date of Birth</label>
+          <label for="dob">Date of Birth:</label>
           <input id="dob" name="dob" type="date" required/>
         </div>
         <div id="agree">
